# navbench

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  TODO.md  ca_example.ipynb  example_ridf.ipynb  navbench.py  pixpro_demo.py  pyproject.toml  pytest.ini  remove_sky_db.py  route_idfs.ipynb  route_idfs.py  route_idfs_campus.ipynb  run_tests.py  run_tests.sh  test_coverage.sh  threshold_db.py  view_database.py  view_idf.py  view_ridf.py
analysis/: compare_bob_navigation.py  compare_bob_navigation_pm.py  hashVPR.ipynb  idfs_campus.ipynb  infomax_rc_car.ipynb  many_idfs_campus.ipynb  rc_car.ipynb  rc_car_ca_summary.ipynb  rc_car_catchment_areas.ipynb
analysis/2020-11/: ca_scatter.ipynb  forest.ipynb  many_route_idfs.ipynb  quivers_pixel_vs_infomax.ipynb  route_idfs.ipynb  route_idfs_distances.ipynb  routes.ipynb
analysis/long_route/: long_route_analysis.ipynb
analysis/rc_car_big/: best_worst.py  boxplot_train_skip.py  boxplots.py  dbread_test.py  dbtest.py  export_analysis_to_mat.py  generate_data.py  (+14 more)
c++/: .gitignore  CMakeLists.txt  benchmark_infomax.cc  benchmark_infomax.yaml  benchmark_perf_vs_num_snaps.cc  benchmark_perf_vs_num_snaps.yaml  benchmark_pm.cc  benchmark_pm.yaml  common.h  results.ipynb
examples/: catchment_areas.ipynb  idfs_tractor.ipynb  infomax.ipynb  navbench  preprocessing.ipynb  ridf.ipynb  ridf_noise.ipynb
gm_plotting/: __init__.py  api_client.py
navbench/: __init__.py  ca.py  caching.py  database.py  imgproc.py  improc.py  infomax.py  navigation.py  plotting.py
tests/: test_get_idf_ca.py  test_get_rca.py
(+17 files in other folders)
