[tool.poetry]
name = "navbench"
version = "0.1.0"
description = "Navigation analysis with code"
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
gm-plotting = "^0.1.0"
utm = "^0.7.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
black = {extras = ["jupyter"], version = "^22.6.0"}
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
